<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp">

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="60dp"
        android:hint="@string/_0"
        android:inputType="number|text"
        android:text=""
        android:textAlignment="textEnd"
        android:textSize="70sp"
        app:layout_constraintBottom_toTopOf="@+id/clearButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/clearButton"
        android:layout_width = "0dp"
        android:layout_height = "wrap_content"
        android:layout_margin="5dp"
        android:textSize = "50sp"
        android:text="@string/clear"
        app:layout_constraintEnd_toStartOf="@+id/divideButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText"
        app:layout_constraintWidth_percent="0.75" />

    <Button
        android:id="@+id/divideButton"
        style="@style/Buttons"
        android:text="@string/divide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/clearButton"
        app:layout_constraintTop_toBottomOf="@id/editText"
        app:layout_constraintWidth_percent="0.2" />

    <Button
        android:id="@+id/button7"
        style="@style/Buttons"
        android:text="@string/_7"
        app:layout_constraintEnd_toStartOf="@id/button8"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintHorizontal_weight="0.24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clearButton" />

    <Button
        android:id="@+id/button8"
        style="@style/Buttons"
        android:text="@string/_8"
        app:layout_constraintEnd_toStartOf="@id/button9"
        app:layout_constraintHorizontal_weight="0.24"
        app:layout_constraintStart_toEndOf="@id/button7"
        app:layout_constraintTop_toBottomOf="@id/clearButton" />

    <Button
        android:id="@+id/button9"
        style="@style/Buttons"
        android:text="@string/_9"
        app:layout_constraintEnd_toStartOf="@id/multiplyButton"
        app:layout_constraintHorizontal_weight="0.24"
        app:layout_constraintStart_toEndOf="@id/button8"
        app:layout_constraintTop_toBottomOf="@id/clearButton" />

    <Button
        android:id="@+id/multiplyButton"
        style="@style/Buttons"
        android:text="@string/multiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="0.15"
        app:layout_constraintStart_toEndOf="@id/button9"
        app:layout_constraintTop_toBottomOf="@id/clearButton" />


    <Button
        android:id="@+id/button4"
        style="@style/Buttons"
        android:text="@string/_4"
        app:layout_constraintEnd_toStartOf="@id/button5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintHorizontal_weight="0.24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button7" />

    <Button
        android:id="@+id/button5"
        style="@style/Buttons"
        android:text="@string/_5"
        app:layout_constraintEnd_toStartOf="@id/button6"
        app:layout_constraintHorizontal_weight="0.24"
        app:layout_constraintStart_toEndOf="@id/button4"
        app:layout_constraintTop_toBottomOf="@id/button7" />

    <Button
        android:id="@+id/button6"
        style="@style/Buttons"
        android:text="@string/_6"
        app:layout_constraintEnd_toStartOf="@id/subtractButton"
        app:layout_constraintHorizontal_weight="0.24"
        app:layout_constraintStart_toEndOf="@id/button5"
        app:layout_constraintTop_toBottomOf="@id/button7" />

    <Button
        android:id="@+id/subtractButton"
        style="@style/Buttons"
        android:text="@string/subtract"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="0.15"
        app:layout_constraintStart_toEndOf="@id/button6"
        app:layout_constraintTop_toBottomOf="@id/button7" />

    <Button
        android:id="@+id/button1"
        style="@style/Buttons"
        android:text="@string/_1"
        app:layout_constraintEnd_toStartOf="@id/button2"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintHorizontal_weight="0.24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button4" />

    <Button
        android:id="@+id/button2"
        style="@style/Buttons"
        android:text="@string/_2"
        app:layout_constraintEnd_toStartOf="@id/button3"
        app:layout_constraintHorizontal_weight="0.24"
        app:layout_constraintStart_toEndOf="@id/button1"
        app:layout_constraintTop_toBottomOf="@id/button4" />

    <Button
        android:id="@+id/button3"
        style="@style/Buttons"
        android:text="@string/_3"
        app:layout_constraintEnd_toStartOf="@id/addButton"
        app:layout_constraintHorizontal_weight="0.24"
        app:layout_constraintStart_toEndOf="@id/button2"
        app:layout_constraintTop_toBottomOf="@id/button4" />

    <Button
        android:id="@+id/addButton"
        style="@style/Buttons"
        android:text="@string/add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="0.15"
        app:layout_constraintStart_toEndOf="@id/button3"
        app:layout_constraintTop_toBottomOf="@id/button4" />

    <Button
        android:id="@+id/button0"
        style="@style/Buttons"
        android:text="@string/_0"
        app:layout_constraintEnd_toStartOf="@+id/dotButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button1"
        app:layout_constraintWidth_percent="0.5" />

    <Button
        android:id="@+id/dotButton"
        style="@style/Buttons"
        android:text="@string/dot"
        app:layout_constraintEnd_toStartOf="@id/equalButton"
        app:layout_constraintStart_toEndOf="@+id/button0"
        app:layout_constraintTop_toBottomOf="@id/button1"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/equalButton"
        style="@style/Buttons"
        android:text="@string/equal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dotButton"
        app:layout_constraintTop_toBottomOf="@id/button1"
        app:layout_constraintWidth_percent="0.2" />

</androidx.constraintlayout.widget.ConstraintLayout>

